# on-the-record

.github/workflows/: deploy.yml
backend/: .gitignore  pyproject.toml
backend/data/: .~lock.articles.csv#  .~lock.data.csv#  articles.csv  data.csv
backend/src/on_the_record/: app.py  constants.py  database.py
backend/src/on_the_record/articles/: __init__.py  router.py
backend/src/on_the_record/artists/: __init__.py  router.py
backend/src/on_the_record/auth/: auth.py
backend/src/on_the_record/cart/: __init__.py  helper.py  models.py  router.py
backend/src/on_the_record/code/: __init__.py  helper.py  map.py  modifiers.py
backend/src/on_the_record/factories/: database_factory.py
backend/src/on_the_record/models/: artist.py  track.py
backend/src/on_the_record/profiles/: profiles.py
backend/src/on_the_record/scheduled_tasks/: run_tasks.py  scheduled_tasks.py  send_discount_email.py
backend/src/on_the_record/scripts/: insert_data.py  seed_articles.py
backend/src/on_the_record/segment/: __init__.py  segment.py
backend/src/on_the_record/sendgrid/: sendgrid.py
backend/src/on_the_record/session/: __init__.py  router.py
backend/src/on_the_record/verify/: verify.py
client/: package-lock.json  package.json  tsconfig.json
client/src/pages/: _app.tsx  _document.tsx  about-us.tsx  checkout.tsx  contact.tsx  index.tsx  login.tsx
client/src/providers/: trpc-provider.tsx
client/src/server/: trpc.ts
on-the-record-agent/: README.md  package-lock.json  package.json
on-the-record-agent/src/: app.ts  llm.ts
terraform/: main.tf  variables.tf
(+90 files in other folders)
