[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jayden Pyles", email = "jpylesbusiness@gmail.com"},
]
dependencies = ["fastapi>=0.120.0", "pydantic>=2.12.3", "jose>=1.0.0", "passlib>=1.7.4", "python-jose[cryptography]>=3.5.0", "uvicorn>=0.38.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
